--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1>Comments</h1>
-<ul>
-    <li *ngFor="let comment of comments">{{comment}}</li>
-</ul>
+<app-add-comment></app-add-comment>
+<app-comment-list></app-comment-list>
