so close, yet soo broken

--- a/src/app/edit-comment/edit-comment.component.html
+++ b/src/app/edit-comment/edit-comment.component.html
@@ -1,8 +1,8 @@
-<section>
-	<button class="btn btn-warning">edit</button>
+ <section>
+	<button class="btn btn-warning" (click)="editComment(commentId)">edit</button>
 	<div *ngIf="editing">
 		<input [(ngModel)]="editedComment" type="text" placeholder="edit comment">
 		<input [(ngModel)]="editedAutor" type="text" placeholder="edit author">
-		<button class="btn btn-info" (click)="updatedComment(commentId, editedComment, editedAuthor)">update comment</button>
+		<button class="btn btn-info" (click)="updateComment(commentId, editedComment, editedAuthor)">update comment</button>
 	</div>
 </section>
